# CondorLite

./: CMakeLists.txt  README.md  main.c
src/condor/ast/: ast.c  ast.h  astlist.h  scope.h
src/condor/lexer/: lexer.h
src/condor/mem/: allocate.h
src/condor/number/: number.h
src/condor/runner/: runner-math.c  runner-math.h  runner-types.h  runner.c  runner.h
src/condor/semantic/: semantic.c  semantic.h  typechecker.h
src/condor/syntax/: syntax.c  syntax.h
src/condor/token/: token.h
src/utils/: assert.h  clock.h  debug.h  types.h
src/utils/file/: file.h
src/utils/string/: string.h
tests/: CMakeLists.txt  main.c
tests/condor/ast/: test_ast.c  test_ast.h
